# boolean-inference

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: ablation.py  bank_check.py  bank_common.py  bank_families.py  bank_manifest.json  bank_manifest_gen.py  calib.sbatch  calib_tseitin.sbatch  calibrate_cutoff.py  census.py  conquer_cubes.py  conquer_parallel.py  f28_prod.sbatch  fetch_addmc.py  fetch_archive.py  fetch_mcc.py  fetch_uai.py  frontier.sbatch  frontier_dp.py  gen_factoring.py  gen_ising.py  instances.json  instances_check.py  instances_gen.py  minic2d_to_mcc.py  phase0.sbatch  phase0_aggregate.py  phase0_run.py  signal_matrix.py  uai_to_wcn.py
benchmarks/cnc/: README.md  aggregate_hard_regime.py  calibrate_cc_difficulty.py  calibrate_hard_regime.py  conquer_parallel.py  cubing.py  factoring.py  full_tree_attribution.py  hard_regime.py  hard_regime_matrix.py  requirements.txt  residual_mediation.py  residual_mediation_cohort.py  run_hard_regime_cell.py  solve.py  trace_mechanism.py  trace_mechanism_cohort.py  verify_hard_regime.py  verify_measurements.py
benchmarks/cnc/contracts/: hard-regime-v1.yaml
benchmarks/cnc/hpc/: build_matrix.sh  calibrate.sh  materialize.sh  report.sh  run_cell.sh  smoke.sh
benchmarks/csp/: README.md  cp_sat_solve.py  gen_coloring.py  gen_extcsp.py  gen_qcp.py  gen_tseitin.py  gen_x3c.py  gen_xor.py
benchmarks/hpc2/: README.md  build_yosys.sh  generate_scope_v3_pilot.sh  yosys-build-env.lock.txt  yosys-build-env.yaml
benchmarks/manifests/: README.md  scope-v3-candidate.jsonl  scope-v3-candidate.yaml  scope-v3-scale-probe-w128.jsonl  scope-v3-scale-probe-w128.measurements.json  scope-v3-scale-probe-w128.yaml  scope-v3-scale-probe-w64.jsonl  scope-v3-scale-probe-w64.measurements.json  scope-v3-scale-probe-w64.yaml  scope-v3-scale-probe-w96.jsonl  scope-v3-scale-probe-w96.measurements.json  scope-v3-scale-probe-w96.yaml
benchmarks/pipeline/: README.md  __init__.py  artifacts.py  circuit.py  circuitsat_to_cnf.py  cli.py  cnf.py  collect_manifest.py  fetch_public.py  generate_multiplier_instances.py  generate_structural_multiplier.py  generate_targets.py  import_verilog.py  instances.py  make_miter.py  make_preimages.py  multipliers.py  pin_outputs.py  summarize_multiplier_corpus.py  validate.py  validate_multiplier_witnesses.py  verilog.py  yosys_json_to_circuitsat.py
benchmarks/scope/: README.md  audit.py  benchmark-scope.schema.json  benchmark-scope.yaml
cnc-tools/: .gitignore  Makefile  README.md
docs/: phase2-report.html  phase3-report.html
docs/research/: 2026-06-30-incremental-table-propagation.md  2026-07-01-lookahead-probe-count-optimization.md  2026-07-01-tree-based-lookahead-implementation.md  2026-07-02-post-prefix-sharing-profile.md  2026-07-02-prefix-sharing-lookahead-verdict.md  2026-07-02-sparse-contraction-wcoj.md  2026-07-02-structured-csp-benchmarks.md
docs/superpowers/plans/: 2026-06-29-bounded-ve-canonicalizer.md  2026-06-29-trail-mechanism.md  2026-07-01-compact-table-propagation.md  2026-07-02-contract-primitive.md  2026-07-02-measurement-path-ct.md  2026-07-02-prefix-sharing-lookahead.md
docs/superpowers/specs/: 2026-06-29-bounded-ve-canonicalizer-design.md  2026-06-29-trail-mechanism-design.md  2026-07-01-compact-table-propagation-design.md  2026-07-02-contract-primitive-design.md  2026-07-02-measurement-path-ct-design.md  2026-07-02-prefix-sharing-lookahead-design.md
examples/: phase2_demo.rs  phase2_perf.rs  phase3_demo.rs  solve_circuit.rs
experiments/: cnc-study.schema.json  cnc-study.yaml
experiments/cnc/: README.md  contract.py
src/: adapter.rs  api.rs  blockmerge.rs  canonicalize.rs  cdcl.rs  circuit.rs  conquer.rs  contract.rs  csp.rs  ct.rs  cube.rs  dimacs.rs  domain.rs  gammacover.rs  instance.rs  lib.rs  main.rs  measure.rs  network.rs  problem.rs  propagate.rs  region.rs  residual.rs  selector.rs  semiring.rs  solver.rs  table.rs  tail_greedy.rs  termination.rs  trail.rs  twosat.rs  util.rs
tests/: acceptance.rs  cli.rs  cnc_cuber_trace.rs  cnc_streaming.rs  ct_acceptance.rs  factoring.rs  node_counts.rs  oracle.rs  test_aggregate_hard_regime.py  test_benchmark_pipeline.py  test_benchmark_scope.py  test_calibrate_cc_difficulty.py  test_calibrate_hard_regime.py  test_cnc_contract.py  test_cnc_measurements.py  test_cnc_trace_mechanism.py  test_conquer_contract.py  test_conquer_parallel.py  test_cubing.py  test_factoring_corpus.py  test_hard_regime.py  test_hard_regime_matrix.py  test_run_hard_regime_cell.py  test_solve.py  test_verify_hard_regime.py
tests/fixtures/: factoring_12x12.circuitsat.json  factoring_15.circuitsat.json  factoring_16x16.circuitsat.json  factoring_18x18.circuitsat.json  factoring_20x20.circuitsat.json  factoring_22x22.circuitsat.json
tests/fixtures/cnc/: contract-with-split-leakage.yaml
tests/fixtures/cnc/measurement-missing-cube/: bundle.json  events.jsonl  frontier.jsonl  (+1 more)
tests/fixtures/pipeline/: tiny_mul.v
(+8 files in other folders)
