[package]
name = "boolean-inference"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Public OptimalBranching/optimal-branching crate (published as `optimal-branching`),
# aliased via `package` to the `optimal_branching_core` name our code imports.
# Tracks main; the greedymerge size_reduction memoization (bit-identical, removes
# the redundant re-scoring our GreedyMerge path triggered) landed in main via
# OptimalBranching/optimal-branching#2. Cargo.lock pins the exact rev.
optimal-branching-core = { git = "https://github.com/OptimalBranching/optimal-branching.git", package = "optimal-branching" }
# LP/IP stack behind the OB set-cover solvers, taken here as a DIRECT dependency
# so the counting engine's `gammacover` arm can build its OWN exact-cover model
# (`Σ x = 1` per config) — OB's `solve_cover_model` is `≥ 1` set-cover and
# private, so it cannot be reused for a partition. Same feature line OB pins.
good_lp = { version = "1", default-features = false, features = ["highs"] }
rustc-hash = "2"
smallvec = "1"
# Arbitrary-precision unsigned integers: the DEFAULT exact-counting weight
# (#CSP solution counts routinely exceed u128). See `src/semiring.rs`.
num-bigint = "0.4"
# Exact rationals (BigRational = Ratio<BigInt>): the WEIGHTED model-counting
# weight (M2.2). Pure Rust, exact — no f64 rounding in the partition function.
num-rational = { version = "0.4", features = ["num-bigint"] }
num-traits = "0.2"
wide = "1.5"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

# Optimized like release but keeps debug symbols for the sampling profiler
# (samply / cargo-flamegraph). Build with: cargo build --profile profiling ...
[profile.profiling]
inherits = "release"
debug = true
