[package]
name = "boolean-inference"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Public OptimalBranching/optimal-branching crate (published as `optimal-branching`),
# aliased via `package` to the `optimal_branching_core` name our code imports.
# Tracks main; the greedymerge size_reduction memoization (bit-identical, removes
# the redundant re-scoring our GreedyMerge path triggered) landed in main via
# OptimalBranching/optimal-branching#2. Cargo.lock pins the exact rev.
optimal-branching-core = { git = "https://github.com/OptimalBranching/optimal-branching.git", package = "optimal-branching" }
rustc-hash = "2"
smallvec = "1"
wide = "1.5"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = { version = "1", optional = true }
rustsat = "0.7.5"
# The crates.io wrapper emits `dbg!` output on every CaDiCaL 2.2 propagation.
# `VENDORED.md` records the one-line wrapper-only patch and upstream revision.
rustsat-cadical = { path = "vendor/rustsat-cadical", features = ["quiet"] }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

# Optimized like release but keeps debug symbols for the sampling profiler
# (samply / cargo-flamegraph). Build with: cargo build --profile profiling ...
[profile.profiling]
inherits = "release"
debug = true
